// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component test Header snapshot test should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#47bba5",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#202020",
            "fontSize": 14,
            "fontWeight": "normal",
          },
          [
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "marginTop": 1,
            },
            undefined,
          ],
          undefined,
          undefined,
        ]
      }
    >
      Header Title
    </Text>
  </View>
</View>
`;

exports[`Header component test Header with Subtitle snapshot test should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#47bba5",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#202020",
              "fontSize": 14,
              "fontWeight": "normal",
            },
            [
              {
                "color": "#FFFFFF",
                "fontSize": 14,
                "marginTop": 1,
              },
              undefined,
            ],
            undefined,
            undefined,
          ]
        }
      >
        Header Title
      </Text>
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#202020",
              "fontSize": 14,
              "fontWeight": "normal",
            },
            {
              "color": "#FFFFFF",
              "marginTop": 1,
            },
            undefined,
            undefined,
          ]
        }
      >
        Header Subtitle
      </Text>
    </View>
  </View>
</View>
`;
